--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                 <div id="game-start" style="visibility:hidden;">
                     <h5 class="card-title" style="font-weight:bolder;">Dealer Hand</h5>
                     <div id="dealer-hand-cards">
-                        <img class="card" id="dealer-card-one" src="/templates/card-back.png" alt="Card">
-                        <img class="card" id="dealer-card-two" src="/templates/card-back.png" alt="Card">
-                        <img class="card" id="dealer-card-three" style="visibility: hidden;" src="/templates/card-back.png" alt="Card">
+                        <img class="card" id="dealer-card-one" src="./templates/card-back.png" alt="Card">
+                        <img class="card" id="dealer-card-two" src="./templates/card-back.png" alt="Card">
+                        <img class="card" id="dealer-card-three" style="visibility: hidden;" src="./templates/card-back.png" alt="Card">
                     </div>
                       <br>
                       <h5 class="card-title" style="font-weight:bolder;">Player Hand</h5>
                       <div id="player-hand-cards">
-                        <img class="card" id="player-card-one" src="/templates/card-back.png" alt="Card">
-                        <img class="card" id="player-card-two" src="/templates/card-back.png" alt="Card">
-                        <img class="card" id="player-card-three" style="visibility: hidden;" src="/templates/card-back.png" alt="Card">
+                        <img class="card" id="player-card-one" src="./templates/card-back.png" alt="Card">
+                        <img class="card" id="player-card-two" src="./templates/card-back.png" alt="Card">
+                        <img class="card" id="player-card-three" style="visibility: hidden;" src="./templates/card-back.png" alt="Card">
                     </div>
                     <p id="declare-winner"></p>
                 <div id="game-info">
