--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <button id="play-again-button" style="visibility:hidden" type="text" onClick="window.location.reload();">Play Again</button>
                 </div>
-                <p id="player-total"></p>
+                <p id="player-total" style="display:none;"></p>
                 </div>
                 </div>
                 <p id="dealer-total" style="display:none;"></p>
